--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,18 @@
 {
     "name": "lecturenotes downloader",
-    "version": "1.3",
+    "version": "1.4",
     "description": "Download notes from lecturenotes.in",
     "content_scripts": [
         {
           "matches": ["https://lecturenotes.in/notes/*"],
-          "js": ["contentScript.js","lib/2.1.1/jspdf.umd.min.js"],
+          "js": ["contentScript.js","lib/2.1.1/jspdf.umd.js"],
           "run_at": "document_idle",
           "css": ["styles.css"]
         }
       ],
       "web_accessible_resources": [
         "injectScript.js",
-        "lib/2.1.1/jspdf.umd.min.js"
+        "lib/2.1.1/jspdf.umd.js"
         ],
     "manifest_version": 2,
     "icons": {
